# effitask

./: Cargo.toml  Makefile
.github/: dependabot.yml
resources/: style.css
src/: agenda.rs  done.rs  edit.rs  filter.rs  flag.rs  inbox.rs  logger.rs  main.rs  search.rs
src/application/: mod.rs  preferences.rs
src/tasks/: list.rs
src/widgets/: calendar.rs  circle.rs  filter.rs  priority.rs  tasks.rs
