[package]
name = "effitask"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
homepage = "https://github.com/todotxt-rs/effitask"
edition = "2024"

[dependencies]
human-panic = "2.0"
notify = "8.0"
pulldown-cmark = "0.13"
regex = "1.0"
relm4 = { git = "https://github.com/Relm4/Relm4.git", rev = "e24915ac03e5ef1ec6f489ac7aeb26ec009f1618" }

[dependencies.async-std]
version = "1.13"
features = ["unstable"]

[dependencies.chrono]
version = "0.4"
default-features = false

[dependencies.envir]
version = "1.0"
default-features = false
features = ["dotenv"]

[dependencies.gtk]
package = "gtk4"
version = "0.9"
features = ["v4_8"]

[dependencies.log]
version = "0.4"
features = ["std"]

[dependencies.todo-txt]
version = "4.1"
features = ["config", "extended"]

[build-dependencies]
glib-build-tools = "0.20"
